# discord-rs

./: Cargo.toml  README.md
src/: client.rs  gateway.rs  main.rs
