[package]
name = "vyper"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "tokio-native-tls"] }
